Fix crash on older devices